# hypermnesia

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/hypermnesia/: auth.py  config.py  db.py  models.py  scoping.py  server.py  service.py
src/hypermnesia/embeddings/: __init__.py  base.py  providers.py
tests/: conftest.py  test_auth.py  test_e2e.py  test_embeddings.py  test_fuse.py  test_scoping.py
