[project]
name = "hypermnesia"
version = "0.1.0"
description = "A semantic memory store for AI agents, exposed over MCP. Local-only, CPU-friendly, pluggable embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "memory", "agents", "embeddings", "pgvector", "rag"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.3",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
    "fastembed>=0.4",
]

[project.optional-dependencies]
# Heavier alternative embedder (pulls in PyTorch); only install if you need it.
sentence-transformers = ["sentence-transformers>=3.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.urls]
Repository = "https://github.com/others-git/hypermnesia"

[project.scripts]
hypermnesia = "hypermnesia.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypermnesia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a running server (deselect with '-m \"not e2e\"').",
]
